<resources>
    <string name="app_name">Near By Venues</string>

    <string name="current_location_hint">Current Location coordinates</string>
    <string name="getting_current_location">getting the current location,please wait.</string>
    <string name="please_turn_on_network">Please turn on Network.</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="please_wait_msg">loading content..</string>
    <string name="venues_not_available">No Near By Venues available !!!</string>
    <string name="location_not_available">Sorry ,Not able to get your location !!!</string>
    <string name="distance_in_meters">%d m</string>
    <string name="title_activity_venue_detail">VenueDetailActivity</string>


    <string name="venue_detail_details">Venue Details</string>
    <string name="venue_detail_name">Venue Name :</string>
    <string name="venue_detail_address">Address :</string>
    <string name="venue_detail_distance">Distance :</string>
    <string name="venue_detail_postal_code">PostalCode :</string>
    <string name="venue_detail_city">City :</string>
    <string name="venue_detail_state">State :</string>
    <string name="venue_detail_country">Country :</string>


    <string name="content_description">venue image</string>

    <string name="sort_by_distance">Sort By Distance</string>
    <string name="show_as_grid">Show As Grid</string>
    <string name="show_as_list">Show As List</string>
    <string name="show_as_staggered_grid">Show As Staggered Grid</string>


</resources>
