<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.satti.fs.android.nbv.activities.VenueDetailActivity"
    tools:showIn="@layout/activity_venue_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/venue_detail_name"
            android:textColor="@color/default_text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/venue_detail_name_textView"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:textColor="@color/colorPrimaryDark"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/venue_detail_address"
            android:textColor="@color/default_text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/venue_detail_address_textView"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:textColor="@color/colorPrimaryDark"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/venue_detail_distance"
            android:textColor="@color/default_text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/venue_detail_distance_textView"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:textColor="@color/colorPrimaryDark"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/venue_detail_postal_code_label_textView"
            android:text="@string/venue_detail_postal_code"
            android:textColor="@color/default_text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/venue_detail_postal_code_textView"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:textColor="@color/colorPrimaryDark"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/venue_detail_city"
            android:textColor="@color/default_text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/venue_detail_city_textView"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:textColor="@color/colorPrimaryDark"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/venue_detail_state"
            android:textColor="@color/default_text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/venue_detail_state_textView"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/venue_detail_country"
            android:textColor="@color/default_text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/venue_detail_country_textView"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

 

</android.support.v4.widget.NestedScrollView>
